Fix for blurry tooltip
Ref: https://github.com/google/material-design-lite/issues/4574

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -209,7 +209,7 @@ a:visited {
     transform: scale(0);
     -webkit-transform-origin: top center;
     transform-origin: top center;
-    will-change: transform;
+    will-change: unset;
     z-index: 999;
     background: rgba(97,97,97, 0.9);
     border-radius: 2px;
